# MyGit

./: README.md  README.txt  desktop.ini  final.drawio  test.txt  untitled.sit  Диаграмма без названия.drawio
1/: 1.sit  terminal1.jl  untitled.sit
10/: 10.sit  terminal10.jl
11/: terminal11.jl  untitled.sit
12/: 12.jl  terminal12.jl  untitled.sit
13/: 13.jl  terminal13.jl
14/: 14.jl  terminal14.jl
15/: 15.jl  15.sit  terminal15.jl  untitled.sit
16/: 16.jl  terminal16.jl  untitled.sit
17/: 17.jl  terminal17.jl  untitled.sit
18/: 18.1.sit  18.jl  terminal18.jl
19/: 19.jl  terminal19.jl
2/: terminal2.jl
20/: 20.jl  20.sit  terminal20.jl  untitled.sit
21/: 21.jl  21.sit  terminal21.jl  untitled.sit
22/: 22.jl  terminal22.jl  untitled.sit
23/: terminal23.jl
24/: 24.jl  24.sit  terminal24.jl  untitled.sit
25/: terminal25.jl  untitled.sit
26/: 26.sit  terminal26.jl  untitled.sit
27/: terminal27.jl  untitled.sit
28/: terminal28.jl
29/: terminal29.jl
3/: 3.sit  terminal3.jl
30/: 30.jl
31/: terminal31.jl  untitled.sit
4/: 4.jl  terminal4.jl  untitled.sit
5/: 5.sit  terminal5.jl
6/: 6.jl  6.sit  terminal6.jl  untitled.sit
7/: 7.sit  terminal7.jl  untitled.sit
8/: 8.jl  terminal8.jl  untitled.sit
9/: terminal9.jl
Acmp/: 1.cpp  1003.cpp  1018.cpp  1043.cpp  1047.cpp  106.cpp  1072.cpp  108.cpp  114.cpp  1151.cpp  1170.cpp  1179.cpp  1180.cpp  1186.cpp  1187.cpp  119.cpp  1201.cpp  1202.cpp  121.cpp  122.cpp  126.cpp  128.cpp  1361.cpp  1362.cpp  14.cpp  (+62 more)
tests/secret/versions/0.7/: CMakeLists.txt  judy_1_test.cpp  judy_general.cpp  judy_hs_test.cpp  judy_l_test.cpp  judy_sl_test.cpp  source.c
tests/secret/versions/v0.73/: CMakeLists.txt  project  test.cpp
tests/secret/versions/v0.73/include/judypp/: judy1.hpp  judyhs.hpp  judyl.hpp  judypp.hpp  judysl.hpp
(+524 files in other folders)
